# scoreapi

./: .gitignore  LICENSE  README.md  openapi.yaml  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: Theneo.yml  sam-pipeline.yml
common/: score.py
doc/: api.yaml
docs/: api.yml
events/: event.json
hello_world/: app.py
score/: app.py
src/: app.py  constants.py  score.py  score_types.py  validation.py
tests/: requirements.txt
tests/integration/: test_api_gateway.py
tests/unit/: test_getscore.py  test_handler.py
