[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scoreapi"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Payment Score API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/openfinanceafrica/scoreapi"
"Bug Tracker" = "https://github.com/openfinanceafrica/scoreapi/issues"